--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ background-color: var(--main-bg-color);
   background-color: var(--blue-color);
   cursor: pointer;
 }
-/*Секция особенности*/
+/*Секция наши особенности*/
 
 .feature-list  {
   font-weight: 700;
